# two-stage-recommender

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  candidate_gen.yaml  data.yaml  experiments.yaml  ranker.yaml
notebooks/: 01_eda.ipynb
scripts/: build_ranking_dataset.py  download_data.py  evaluate.py  prepare_data.py  run_als_baseline.py  run_als_experiments.py  run_api.py  run_experiment.py  run_itemknn_baseline.py  run_lightgbm_ranker.py  run_popularity_baseline.py  train_candidate_gen.py  train_ranker.py
src/: __init__.py
src/candidate_gen/: als.py  item_knn.py  popularity.py
src/data/: build_features.py  load_data.py  preprocess.py
src/eval/: assignment.py  evaluate_candidates.py  evaluate_ranker.py  experiment.py  metrics.py  reporting.py
src/ranking/: dataset.py  features.py  predict.py  train_ranker.py
src/serving/: app.py  config.py  logging.py  schemas.py  service.py
src/utils/: io.py  logging.py  split.py
tests/: test_als.py  test_api.py  test_experiment.py  test_features.py  test_item_knn.py  test_metrics.py  test_preprocess.py  test_ranker.py
